fix spacing and remove contact title

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -103,7 +103,7 @@ $primary: #087990;
 }
 .footer-container {
   height: auto;
-  margin-top: 50px; 
+  margin-top: 40px; 
   max-width: 100%;
   padding: 10px 10px;
 }
